--- a/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -44,7 +44,7 @@
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
-        <td valign="top"><a href="http://www.unicode.org/Public/3.2-Update/StandardizedVariants-@revision@.html">http://www.unicode.org/Public/3.2-Update/StandardizedVariants-@revision@.html</a></td>
+        <td valign="top"><a href="http://www.unicode.org/Public/@updateDirectory@/StandardizedVariants-@revision@.html">http://www.unicode.org/Public/@updateDirectory@/StandardizedVariants-@revision@.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
