jitterbug 0: updated for 4.0, checking POSIX
git-svn-id: https://unicode.org/repos/unicodetools/trunk@104 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -19,7 +19,7 @@
 
 <table class="header">
   <tr>
-    <td class="icon"><a href="http://www.unicode.org"><img align="middle" alt="[Unicode]" border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="UnicodeCharacterDatabase.html">Unicode 
+    <td class="icon"><a href="http://www.unicode.org"><img align="middle" alt="[Unicode]" border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/ucd">Unicode 
       Character Database</a></td>
   </tr>
   <tr>
