--- a/readme.html
+++ b/readme.html
@@ -2,9 +2,9 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>ICU's Unicode Tools Read Me</title>
+<title>Unicode.org's Unicode Tools Read Me</title>
     <meta name="COPYRIGHT" content=
-    "Copyright (c) 2004-2006 IBM Corporation and others. All Rights Reserved." />
+    "Copyright (c) 2004-2007 IBM Corporation and others. All Rights Reserved." />
 <style>
 <!--
 li           { margin-top: 0.5em; margin-bottom: 0.5em }
@@ -19,7 +19,7 @@ li           { margin-top: 0.5em; margin-bottom: 0.5em }
 can be used to:</p>
 <ul>
   <li>build the Derived Unicode files in the UCD (Unicode Character Database),</li>
-  <li>build the transformed UCA (Unicode Collation Algorithm) files needed by ICU.</li>
+  <li>build the transformed UCA (Unicode Collation Algorithm) files needed by Unicode.</li>
   <li>run consistency checks on beta releases of the UCD and the UCA.</li>
   <li>build 4 chart folders on the unicode site</li>
 </ul>
