--- a/org/unicode/data/gen/charts/nameslist/index.html
+++ b/org/unicode/data/gen/charts/nameslist/index.html
@@ -6,7 +6,7 @@
 
 <frameset cols="500,*">
   <frame name="chart" src="c_0000.html" target="main" scrolling="auto">
-  <frame name="names" src="n_mainList.html" target="main" scrolling="auto">
+  <frame name="names" src="mainList.html" target="main" scrolling="auto">
   <noframes>
   <body>
 
