*** empty log message ***
git-svn-id: https://unicode.org/repos/unicodetools/trunk@236 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/data/gen/charts/index.html
+++ b/org/unicode/data/gen/charts/index.html
@@ -13,6 +13,7 @@ Index
 </li>
 <li><a href="script/index.html" target="_top">Script&nbsp;Charts</a></li>
 <li><a href="nameslist/index.html" target="_top">Names&nbsp;List&nbsp;Charts</a></li>
+<li><a href="name/index.html" target="_top">Name&nbsp;Charts</a></li>
 </ul>
 <p>
 </p>
