more refinements from ed committee
git-svn-id: https://unicode.org/repos/unicodetools/trunk@378 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -89,7 +89,7 @@ the variation selector.</p><p>The mathematical variants are all produced with th
     newly encoded characters and hence some representative glyphs shown in the table may have a 
     slightly different style than others.</p>
   </blockquote>
-  <p>@table@</p>
+  @table@
   <hr width="50%">
   <div align="center">
     <center>
