--- a/org/unicode/text/UCA/script_index_header.html
+++ b/org/unicode/text/UCA/script_index_header.html
@@ -24,7 +24,7 @@ href="http://www.unicode.org/webscripts/standard_styles.css">
         <td class="icon"><a href="http://www.unicode.org/"><img border="0" 
         src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" 
         alt="[Unicode]" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" 
-        href="http://www.unicode.org/unicode/faq/"><font size="3">Charts</font></a>
+        href="http://www.unicode.org/charts/" target='_top'><font size="3">Code Charts</font></a>
       </tr>
     </table>
     </td>
