updates to charts from editorial committee
git-svn-id: https://unicode.org/repos/unicodetools/trunk@419 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/text/UCA/index.html
+++ b/org/unicode/text/UCA/index.html
@@ -8,7 +8,7 @@
 
 <frameset cols="192,*">
   <frame name="header" src="index_list.html" target="main" scrolling="auto">
-  <frame name="main" src="help.html" target="main" scrolling="auto">
+  <frame name="main" src="$initialPage$" target="main" scrolling="auto">
   <noframes>
   <body>
 
