--- a/org/unicode/text/UCA/norm_index_header.html
+++ b/org/unicode/text/UCA/norm_index_header.html
@@ -33,4 +33,5 @@ href="http://www.unicode.org/webscripts/standard_styles.css">
 <div class="body">
 <!-- BEGIN CONTENTS -->
 <h2 align="center">Normalization Chart</h2>
-<p align="center"><a href="help.html">Help</a>
+<p style="text-align:center"><a href="help.html">Help</a></p>
+<p>
