--- a/org/unicode/text/UCA/script_help.html
+++ b/org/unicode/text/UCA/script_help.html
@@ -18,14 +18,12 @@ th           { background-color: #eeeeee }
 <body>
 
 <h1>Instructions</h1>
-<p>The Script charts provide an index to Unicode characters by script.</p>
+<p>The Script charts provide an index to Unicode characters by script. Where the script = Common, the General Category is used in the index instead, at the end of the list.</p>
 <blockquote>
   <p><i>To properly view these charts, your browser should be reasonably recent 
   so it handles Unicode and cascading style sheets, and you should install a 
   Unicode font and configure your browser to use it.</i></p>
 </blockquote>
-<p>Where the script = Common, the General Category is used in the index instead.</p>
-
 </body>
 
 </html>
