--- a/org/unicode/text/UCA/nameslist_chart_header.html
+++ b/org/unicode/text/UCA/nameslist_chart_header.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <meta name="keywords" content="Basic">
-<title>Script Chart</title>
+<title>Case Chart</title>
 <style>
 <!--
 p {
@@ -13,9 +13,10 @@ p {
 }
 -->
 </style>
-<base target="main">
+<base target="chart">
 <link rel="stylesheet" type="text/css"
 	href="http://www.unicode.org/webscripts/standard_styles.css">
+<link rel='stylesheet' type='text/css' href='nameslist.css'>
 </head>
 
 <body>
@@ -37,8 +38,8 @@ p {
 	</table>
 	<div class="body">
 		<!-- BEGIN CONTENTS -->
-		<h2 align="center">Script Chart</h2>
+		<h2 align="center">Nameslist Chart</h2>
 		<p style="text-align:center">
-			<a href="help.html">Help</a>
+			<a href="help.html" target="names">Help</a>
 		</p>
-		<p>
+		<table>
