--- a/org/unicode/text/UCA/nameslist_index.html
+++ b/org/unicode/text/UCA/nameslist_index.html
@@ -4,16 +4,17 @@
 <title>Name List Charts</title>
 </head>
 
-<frameset rows="50%,*">
-  <frame name="chart" src="c_0000.html" target="main" scrolling="auto">
-  <frame name="names" src="mainList.html" target="main" scrolling="auto">
-  <noframes>
-  <body>
-
-  <p>This page uses frames, but your browser doesn't support them.</p>
-
-  </body>
-  </noframes>
+<frameset cols="25%,*">
+	<frame name="blocks" src="mainList.html" target="main" scrolling="auto">
+	<frameset rows="50%,*">
+	  <frame name="chart" src="c_0000.html" target="main" scrolling="auto">
+	  <frame name="names" src="n_0000.html" target="main" scrolling="auto">
+	</frameset>
+	<noframes>
+	<body>
+		<p>This page uses frames, but your browser doesn't support them.</p>
+	</body>
+	</noframes>
 </frameset>
 
 </html>
