Chart fixes for 6.2
git-svn-id: https://unicode.org/repos/unicodetools/trunk@420 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/text/UCA/nameslist_help.html
+++ b/org/unicode/text/UCA/nameslist_help.html
@@ -6,7 +6,7 @@
 <meta name="ProgId" content="FrontPage.Editor.Document">
 
 <title>Chart Instructions</title>
-<style>
+<style type='text/css'>
 <!--
 th {
 	background-color: #eeeeee
