--- a/org/unicode/text/UCA/name_help.html
+++ b/org/unicode/text/UCA/name_help.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC '-//W3C//DTD HTML 4.01 Transitional//EN' 'http://www.w3.org/TR/html4/loose.dtd'>
 <html>
 
 <head>
@@ -7,7 +8,7 @@
     <meta name="COPYRIGHT" content=
     "Copyright (c) 2002-2005 IBM Corporation and others. All Rights Reserved.">
 <title>Chart Instructions</title>
-<style>
+<style type='text/css'>
 
 <!--
 
