--- a/org/unicode/text/UCA/nameslist_chart_header.html
+++ b/org/unicode/text/UCA/nameslist_chart_header.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta name="keywords" content="Basic">
 <title>Case Chart</title>
-<style>
+<style type='text/css'>
 <!--
 p {
 	font-size: 90%
@@ -42,4 +42,5 @@ p {
 		<p style="text-align:center">
 			<a href="help.html" target="names">Help</a>
 		</p>
+		<p>
 		<table>
