--- a/org/unicode/text/UCA/norm_index_header.html
+++ b/org/unicode/text/UCA/norm_index_header.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta name="keywords" content="Basic">
 <title>Normalization Chart</title>
-<style><!--
+<style type='text/css'><!--
 p            { font-size: 90% }
 --></style>
 <base target="main">
