Fixes for #29 related changes
git-svn-id: https://unicode.org/repos/unicodetools/trunk@513 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -68,7 +68,10 @@
   <h2>Introduction</h2>
   <p>Standardized
 variation sequences are defined in StandardizedVariants.txt and are
-displayed in the table in this document. Ideographic variation
+displayed in the table in this document, with the exception of 
+standardized variants of Unified_Ideograph characters with FE00..FE02,
+which provide the visual appearance of a CJK compatibility ideograph.
+Ideographic variation
 sequences are defined according to the registration process specified
 in UTS #37, and are listed in the Ideographic Variation Database. Only
 those two types of variation sequences are sanctioned for use by
